--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -7,18 +7,17 @@
   </h1>
   <div class="[ sidebar ] [ ic g2 ]">
     <div class="[ flow1 main50% ]">
+
       {% if locale == 'en' %}
       <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
       <p>Pain is necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.</p>
       <p><i>BEVAE</i> is a collaborative effort between Frederik Kehlet (left) and Zeph Scamps (right), two physical therapy students based in Madrid, Spain. We work together to make everything freely available in different languages.</p>
+
       {% elif locale == 'es' %}
-      <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
-      <p>Pain is a very personal experience. It's necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling.</p>
-      <p>Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public. We work collectively to make these resources freely available in different languages.</p>
+
       {% elif locale == 'fr' %}
-      <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
-      <p>Pain is a very personal experience. It's necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling.</p>
-      <p>Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public. We work collectively to make these resources freely available in different languages.</p>
+      <p>L’Association Internationale pour L’Étude de la Douleur définit la douleur comme « une expérience sensorielle et émotionnelle désagréable associée ou ressemblant à une lésion tissulaire réelle ou potentielle ».</p>
+      <p>La douleur est nécessaire pour survivre, mais elle peut parfois devenir incontrôlable et être très pénible et invalidante. Notre mission est de développer des ressources d’éducation et de réadaptation de qualité pour les cliniciens, les patients et le grand public.</p>
       {% endif %}
     </div>
     <div class="[ side8 cluster ] [ g2 ]">
