--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -8,7 +8,7 @@
   <link rel="preload" href="/assets/fonts/opensans-400.woff" as="font" type="font/woff">
   <link rel="preload" href="/assets/fonts/opensans-700.woff" as="font" type="font/woff">
   <link rel="stylesheet" href="/assets/styles.css">
-  <title>BEVAE | {{ title }}{% if subtitle %}: {{ subtitle }}{% endif %}</title>
+  <title>BEVAE // {{ title }}{% if subtitle %}: {{ subtitle }}{% endif %}</title>
 
   {% block head %}{% endblock %}
 </head>
