--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,5 +1,5 @@
-<header class="[ nav-header ] [ cluster squeeze12 ] [ cx g-2 ]">
-  <nav>
-    <a class="[ logo ] [ fs2 ]" href="/{{ locale }}/">BEVAE</a>
+<header class="[ px2 pt0 pb-3 bg-p100 ]">
+  <nav class="[ squeeze12 ] [ cx tc ]">
+    <a class="[ nav-logo ] [ fs2 ]" href="/{{ locale }}/">BEVAE</a>
   </nav>
 </header>
