--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -11,13 +11,17 @@
       {% if locale == 'en' %}
       <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
       <p>Pain is necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.</p>
-      <p><i>BEVAE</i> is a collaborative effort between Frederik Kehlet (left) and Zeph Scamps (right), two physical therapy students based in Madrid, Spain. We work together to make everything freely available in different languages.</p>
+      <p><i>BEVAE</i> is a collaborative effort between Frederik Kehlet (left) and Zeph Scamps (right), two physical therapy students based in Madrid. We work together to make everything freely available in different languages.</p>
 
       {% elif locale == 'es' %}
+      <p>La Asociación Internacional para el Estudio del Dolor define el dolor como "una experiencia sensorial y emocional desagradable asociada, o parecida a la asociada, con el daño tisular real o potencial".</p>
+      <p>El dolor es necesario para sobrevivir, pero a veces se nos puede ir de las manos y resultar muy angustiante e incapacitante. Nuestra misión es desarrollar recursos de educación y rehabilitación de dolor de alta calidad para clínicos, pacientes y el público en general.</p>
+      <p><i>BEVAE</i> es una colaboración entre Frederik Kehlet (izquierda) y Zeph Scamps (derecha), dos estudiantes de fisioterapia situados en Madrid. Trabajamos juntos para que todo esté disponible de forma gratuita en diferentes idiomas.</p>
 
       {% elif locale == 'fr' %}
       <p>L’Association Internationale pour L’Étude de la Douleur définit la douleur comme « une expérience sensorielle et émotionnelle désagréable associée ou ressemblant à une lésion tissulaire réelle ou potentielle ».</p>
       <p>La douleur est nécessaire pour survivre, mais elle peut parfois devenir incontrôlable et être très pénible et invalidante. Notre mission est de développer des ressources d’éducation et de réadaptation de qualité pour les cliniciens, les patients et le grand public.</p>
+      <p><i>BEVAE</i> est une collaboration entre Frederik Kehlet (à gauche) et Zeph Scamps (à droite), deux étudiants en kinésithérapie basés à Madrid. Nous travaillons ensemble pour que tout soit disponible gratuitement dans différentes langues.</p>
       {% endif %}
     </div>
     <div class="[ side8 cluster ] [ g2 ]">
