--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -1,5 +1,5 @@
-<section class="[ stack ] [ g2 ]">
-  <h1 class="[ tc ]">
+<section class="[ flow1 ]">
+  <h1>
     {% if locale == 'en' %}Welcome!
     {% elif locale == 'es' %}¡Bienvenid@!
     {% elif locale == 'fr' %}Bienvenue!
