--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -1,8 +1,8 @@
 <section class="[ flow1 ]">
   <h1>
-    {% if locale == 'en' %}Welcome!
-    {% elif locale == 'es' %}¡Bienvenid@!
-    {% elif locale == 'fr' %}Bienvenue!
+    {% if locale == 'en' %}The pain revolution is here.
+    {% elif locale == 'es' %}La revolución del dolor ha llegado.
+    {% elif locale == 'fr' %}La révolution de la douleur est arrivée.
     {% endif %}
   </h1>
   <div class="[ sidebar ] [ ic g2 ]">
