--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -11,7 +11,7 @@
   <title>BEVAE // {{ title }}{% if subtitle %}: {{ subtitle }}{% endif %}</title>
   {% block head %}{% endblock %}
 </head>
-<body class="stack">
+<body class="[ stack ]">
   {% block body %}{% endblock %}
 </body>
 </html>
