--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -20,7 +20,7 @@
 
       {% elif locale == 'fr' %}
       <p>L’Association Internationale pour L’Étude de la Douleur définit la douleur comme « une expérience sensorielle et émotionnelle désagréable associée ou ressemblant à une lésion tissulaire réelle ou potentielle ».</p>
-      <p>La douleur est nécessaire pour survivre, mais elle peut parfois devenir incontrôlable et être très pénible et invalidante. Notre mission est de développer des ressources d’éducation et de réadaptation de la douleur de qualité pour les cliniciens, les patients et le grand public.</p>
+      <p>La douleur est nécessaire pour survivre, mais elle peut parfois devenir incontrôlable et être très pénible et invalidante. Notre mission est de développer des ressources qualitatives d’éducation et de réadaptation de la douleur pour les cliniciens, les patients et le grand public.</p>
       <p><i>BEVAE</i> est une collaboration entre Frederik Kehlet (à gauche) et Zeph Scamps (à droite), deux étudiants en kinésithérapie basés à Madrid. Nous travaillons ensemble pour que tout soit disponible gratuitement dans différentes langues.</p>
       {% endif %}
     </div>
