IASP def spanish

--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -14,7 +14,7 @@
       <p><i>BEVAE</i> is a collaborative effort between Frederik Kehlet (left) and Zeph Scamps (right), two physical therapy students based in Madrid. We work together to make everything freely available in different languages.</p>
 
       {% elif locale == 'es' %}
-      <p>La Asociación Internacional para el Estudio del Dolor define el dolor como "una experiencia sensorial y emocional desagradable asociada, o parecida a la asociada, con el daño tisular real o potencial".</p>
+      <p>La Asociación Internacional para el Estudio del Dolor define el dolor como "una experiencia sensorial y emocional desagradable asociada o parecida a la asociada a un daño tisular real o potencial".</p>
       <p>El dolor es necesario para sobrevivir, pero a veces se nos puede ir de las manos y resultar muy angustiante e incapacitante. Nuestra misión es desarrollar recursos de educación y rehabilitación de dolor de alta calidad para clínicos, pacientes y el público en general.</p>
       <p><i>BEVAE</i> es una colaboración entre Frederik Kehlet (izquierda) y Zeph Scamps (derecha), dos estudiantes de fisioterapia situados en Madrid. Trabajamos juntos para que todo esté disponible de forma gratuita en diferentes idiomas.</p>
 
