--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -19,7 +19,7 @@
       <p><i>BEVAE</i> es una colaboración entre Frederik Kehlet (izquierda) y Zeph Scamps (derecha), dos estudiantes de fisioterapia situados en Madrid. Trabajamos juntos para que todo esté disponible de forma gratuita en diferentes idiomas.</p>
 
       {% elif locale == 'fr' %}
-      <p>L’Association Internationale pour L’Étude de la Douleur définit la douleur comme « une expérience sensorielle et émotionnelle désagréable associée ou ressemblant à une lésion tissulaire réelle ou potentielle ».</p>
+      <p>L’Association Internationale pour L’Étude de la Douleur définit la douleur comme « une expérience sensorielle et émotionnelle désagréable associée ou ressemblant à celle associée à une lésion tissulaire réelle ou potentielle ».</p>
       <p>La douleur est nécessaire pour survivre, mais elle peut parfois devenir incontrôlable et être très pénible et invalidante. Notre mission est de développer des ressources qualitatives d’éducation et de réadaptation de la douleur pour les cliniciens, les patients et le grand public.</p>
       <p><i>BEVAE</i> est une collaboration entre Frederik Kehlet (à gauche) et Zeph Scamps (à droite), deux étudiants en kinésithérapie basés à Madrid. Nous travaillons ensemble pour que tout soit disponible gratuitement dans différentes langues.</p>
       {% endif %}
