--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -25,7 +25,7 @@
       {% endif %}
     </div>
     <div class="[ side8 cluster ] [ g2 ]">
-      <div class="[ squeeze8 stack ] [ g-1 ]">
+      <div class="[ squeezebody stack ] [ g-1 ]">
         <div class="[ image ] [ frame1:1 ]">
           <img src="/assets/img/profile.jpg" alt="Frederik smiling at the camera">
         </div>
