--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -10,7 +10,7 @@
 
       {% if locale == 'en' %}
       <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
-      <p>Pain is necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.</p>
+      <p>Pain is necessary for survival, but sometimes it can get out of hand and be very distressing and disabling. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.</p>
       <p><i>BEVAE</i> is a collaborative effort between Frederik Kehlet (left) and Zeph Scamps (right), two physical therapy students based in Madrid. We work together to make everything freely available in different languages.</p>
 
       {% elif locale == 'es' %}
