--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -14,7 +14,7 @@
       <p><strong>Este sitio web tiene sólo fines educativos. No estamos proporcionando aconsejo médico personalizado ni asumimos responsabilidad por lo que hagas con la información presentada.</strong></p>
 
       {% elif locale == 'fr' %}
-      <p>Nous utilisons un service d’analyse Web sans cookies pour recueillir des statistiques non personnellement identifiables.</p>
+      <p>Nous utilisons un service d’analyse Web sans cookies pour recueillir des statistiques <em>non personnellement identifiables.</em></p>
       <p>Vous voulez communiquer avec nous? Envoyez un courriel à <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
       <p><strong>Ce site Web est à des fins éducatives seulement. Nous ne fournissons pas de conseils médicaux personnalisés et nous ne prenons aucune responsabilité pour ce que vous faites avec les informations présentées.</strong></p>
       {% endif %}
