Move translation buttons in footer

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="[ px0 pt2 pb1 fs-1 ]">
-  <div class="[ cluster squeeze12 ] [ cx ie g2 ]">
+  <div class="[ cluster squeeze12 ] [ cx ie jb g2 ]">
     <div class="[ flow1 ]">
       {% if locale == 'da' %}
 
