Remove cookie notice

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -3,24 +3,24 @@
     <div class="[ flow1 ]">
       {% if locale == 'da' %}
 
-      <p>Vi bruger en cookie-fri webanalysetjeneste til at indsamle <em>ikke personligt identificerbare</em> statistikker.</p>
+      <!-- <p>Vi bruger en cookie-fri webanalysetjeneste til at indsamle <em>ikke personligt identificerbare</em> statistikker.</p> -->
       <p>Ønsker du at kontakte os? Send en e-mail til <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
       <p><strong>Denne webside er kun beregnet til undervisningsformål. Vi giver ikke personlig medicinsk rådgivning, og vi tager intet ansvar for, hvad du gør med fremlagte oplysninger.</strong></p>
 
       {% elif locale == 'en' %}
 
-      <p>We use a cookie-free web analytics service to collect <em>non-personally identifiable</em> statistics.</p>
-      <p>Wanna get in touch? Send an email to <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
+      <!-- <p>We use a cookie-free web analytics service to collect <em>non-personally identifiable</em> statistics.</p> -->
+      <p>Want to get in touch? Send an email to <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
       <p><strong>This website is for educational purposes only. We are not providing personalized medical advice and we take no responsibility for what you do with the information presented.</strong></p>
 
       {% elif locale == 'es' %}
 
-      <p>Recopilamos estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies.</p>
+      <!-- <p>Recopilamos estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies.</p> -->
       <p>¿Quieres ponerte en contacto? Manda un correo a <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
       <p><strong>Este sitio web tiene sólo fines educativos. No estamos proporcionando aconsejo médico personalizado ni asumimos responsabilidad por lo que hagas con la información presentada.</strong></p>
 
       {% elif locale == 'fr' %}
-      <p>Nous utilisons un service d’analyse Web sans cookies pour recueillir des statistiques <em>non personnellement identifiables.</em></p>
+      <!-- <p>Nous utilisons un service d’analyse Web sans cookies pour recueillir des statistiques <em>non personnellement identifiables.</em></p> -->
       <p>Vous voulez communiquer avec nous? Envoyez un courriel à <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
       <p><strong>Ce site Web est à des fins éducatives seulement. Nous ne fournissons pas de conseils médicaux personnalisés et nous ne prenons aucune responsabilité pour ce que vous faites avec les informations présentées.</strong></p>
       {% endif %}
