--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -10,7 +10,7 @@
     <div class="[ flow1 main50% ]">
 
       {% if locale == 'da' %}
-      <p>Den Internationale Forening for Undersøgelse af Smerte definerer smerte som « en ubehagelig sensorisk og følelsesmæssig oplevelse, der er forbundet med, eller minder om den forbundet med, en faktisk eller potentiel vævsskade ».</p>
+      <p>Den Internationale Forening for Undersøgelse af Smerte definerer smerte som »en ubehagelig sensorisk og følelsesmæssig oplevelse, der er forbundet med, eller minder om den forbundet med, en faktisk eller potentiel vævsskade«.</p>
       <p>Smerte er nødvendig for overlevelse, men nogle gange kan det komme ud af kontrol og være meget foruroligende og invaliderende. Vores mission er at udvikle smerteundervisnings- og rehabiliteringsressourcer af høj kvalitet til klinikere, patienter og offentligheden.</p>
       <p><i>BEVAE</i> er et samarbejde mellem Frederik Kehlet (venstre) og Zeph Scamps (højre), to fysioterapeutstuderende i Madrid. Vi arbejder sammen for at gøre alt frit tilgængeligt på forskellige sprog.</p>
 
