CAC español PUBLISH!

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -17,7 +17,7 @@
 
       <!-- <p>Recopilamos estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies.</p> -->
       <p>¿Quieres ponerte en contacto? Manda un correo a <a href="mailto:frederik@bevae.com" target="_blank">frederik@bevae.com</a></p>
-      <p><strong>Este sitio web tiene sólo fines educativos. No estamos proporcionando aconsejo médico personalizado ni asumimos responsabilidad por lo que hagas con la información presentada.</strong></p>
+      <p><strong>Este sitio web tiene solo fines educativos. No estamos proporcionando aconsejo médico personalizado ni asumimos responsabilidad por lo que hagas con la información presentada.</strong></p>
 
       {% elif locale == 'fr' %}
       <!-- <p>Nous utilisons un service d’analyse Web sans cookies pour recueillir des statistiques <em>non personnellement identifiables.</em></p> -->
