Move translations to header; update 11ty

--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,5 +1,6 @@
-<header class="[ px0 pt0 pb-3 bg-p100 ]">
-  <nav class="[ squeeze12 ] [ cx ]">
-    <a class="[ nav-logo ] [ fs2 ]" href="/{{ locale }}/">BEVAE</a>
+<header class="[ px0 pt0 pb0 bg-p100 ]">
+  <nav class="[ cluster squeeze12 ] [ cx jb ic g0 ]">
+    <a class="[ nav-logo ] [ fs2 pt-3 ]" href="/{{ locale }}/">BEVAE</a>
+    {% include 'partials/translations.html' %}
   </nav>
 </header>
