--- a/src/_includes/partials/homeIntro.html
+++ b/src/_includes/partials/homeIntro.html
@@ -6,26 +6,22 @@
     {% elif locale == 'fr' %}La révolution de la douleur est arrivée.
     {% endif %}
   </h1>
-  <div class="[ sidebar ] [ ic g2 ]">
+  <div class="[ sidebar ] [ g2 ]">
     <div class="[ flow1 main50% ]">
 
       {% if locale == 'da' %}
-      <p>Den Internationale Forening for Undersøgelse af Smerte definerer smerte som »en ubehagelig sensorisk og følelsesmæssig oplevelse, der er forbundet med, eller minder om den forbundet med, en faktisk eller potentiel vævsskade«.</p>
       <p>Smerte er nødvendig for overlevelse, men nogle gange kan det komme ud af kontrol og være meget foruroligende og invaliderende. Vores mission er at udvikle smerteundervisnings- og rehabiliteringsressourcer af høj kvalitet til klinikere, patienter og offentligheden.</p>
       <p><i>BEVAE</i> er et samarbejde mellem Frederik Kehlet (venstre) og Zeph Scamps (højre), to fysioterapeutstuderende i Madrid. Vi arbejder sammen for at gøre alt frit tilgængeligt på forskellige sprog.</p>
 
       {% elif locale == 'en' %}
-      <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
       <p>Pain is necessary for survival, but sometimes it can get out of hand and be very distressing and disabling. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.</p>
       <p><i>BEVAE</i> is a collaborative effort between Frederik Kehlet (left) and Zeph Scamps (right), two physical therapy students based in Madrid. We work together to make everything freely available in different languages.</p>
 
       {% elif locale == 'es' %}
-      <p>La Asociación Internacional para el Estudio del Dolor define el dolor como « una experiencia sensorial y emocional desagradable asociada o parecida a la asociada a un daño tisular real o potencial ».</p>
       <p>El dolor es necesario para sobrevivir, pero a veces se nos puede ir de las manos y resultar muy angustiante e incapacitante. Nuestra misión es desarrollar recursos de educación y rehabilitación de dolor de alta calidad para clínicos, pacientes y el público en general.</p>
       <p><i>BEVAE</i> es una colaboración entre Frederik Kehlet (izquierda) y Zeph Scamps (derecha), dos estudiantes de fisioterapia situados en Madrid. Trabajamos juntos para que todo esté disponible de forma gratuita en diferentes idiomas.</p>
 
       {% elif locale == 'fr' %}
-      <p>L’Association Internationale pour L’Étude de la Douleur définit la douleur comme « une expérience sensorielle et émotionnelle désagréable associée ou ressemblant à celle associée à une lésion tissulaire réelle ou potentielle ».</p>
       <p>La douleur est nécessaire pour survivre, mais elle peut parfois devenir incontrôlable et être très pénible et invalidante. Notre mission est de développer des ressources qualitatives d’éducation et de réadaptation de la douleur pour les cliniciens, les patients et le grand public.</p>
       <p><i>BEVAE</i> est une collaboration entre Frederik Kehlet (à gauche) et Zeph Scamps (à droite), deux étudiants en kinésithérapie basés à Madrid. Nous travaillons ensemble pour que tout soit disponible gratuitement dans différentes langues.</p>
       {% endif %}
@@ -33,7 +29,7 @@
     <div class="[ side8 cluster ] [ g2 ]">
       <div class="[ squeezebody stack ] [ g-1 ]">
         <div class="[ image ] [ frame1:1 ]">
-          <img src="/assets/img/profile.jpg" alt="Frederik smiling at the camera">
+          <img src="/assets/img/profile.jpg" alt="Frederik and Zeph standing back to back">
         </div>
       </div>
     </div>
