Add fathom script, use pnpm

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="/assets/styles.css">
   <title>BEVAE // {{ title }}{% if subtitle %}: {{ subtitle }}{% endif %}</title>
   {% block head %}{% endblock %}
+
+  <script src="https://cdn.usefathom.com/script.js" data-site="JHRSRSLR" defer></script>
 </head>
 <body class="[ stack ]">
   {% block body %}{% endblock %}
